kubernetes/demo/4_hello-replicas.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-kube
spec:
  replicas: 3
  selector:
    matchLabels:
      name: hello-kube
  template:
    metadata:
      labels:
        name: hello-kube
    spec:
      containers:
        - name: hello-kube
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          # Needed by appp
