kubernetes/demo/2_hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kube
  labels:
    name: hello-kube

spec:
  selector:
    name: hello-kube
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
