kubernetes/demo/3_hello-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kube
  labels:
    name: hello-kube

spec:
  selector:
    name: hello-kube
  type: NodePort
  externalIPs: ["192.168.121.53"]
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
    nodePort: 30003
