kubernetes/demo/5_hello-versions.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-kube-new
spec:
  selector:
    matchLabels:
      name: hello-kube-new
  template:
    metadata:
      labels:
        name: hello-kube-new
    spec:
      containers:
        - name: hello-kube
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: hello-kube-new
  labels:
    name: hello-kube-new
spec:
  selector:
    name: hello-kube-new
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-kube-old-v1
spec:
  selector:
    matchLabels:
      name: hello-kube-old-v1
  template:
    metadata:
      labels:
        name: hello-kube-old-v1
    spec:
      containers:
        - name: hello-kube
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: hello-kube-old-v1
  labels:
    name: hello-kube-old-v1
spec:
  selector:
    name: hello-kube-old-v1
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-kube-old-v2
spec:
  selector:
    matchLabels:
      name: hello-kube-old-v2
  template:
    metadata:
      labels:
        name: hello-kube-old-v2
    spec:
      containers:
        - name: hello-kube
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kube-old-v2
  labels:
    name: hello-kube-old-v2
spec:
  selector:
    name: hello-kube-old-v2
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
